HISTORY

  Version 4.3.0  2010-04-
  ------------------------------------------------------------------------------
    - UltraDefrag Scheduler has been retired as a component less functional
      than standard Windows Task Scheduler;
      visit http://ultradefrag.wikispaces.com/ for tutorials on scheduling
      disk defragmentation tasks through Windows Task Scheduler
    - more reliable monolithic boot time defragmenter was made
    - few bugs preventing the correct MFT displaying were fixed in driver
    - one little bug preventing displaying system files in green color
      on NTFS volumes was fixed
    - cluster map appearance in GUI was improved and made absolutely
      independent from the screen DPI
    - cluster map block size was made customizable in GUI through
      map_block_size parameter added to guiopts.lua configuration file
    - the following translations were updated:

      Czech, Finnish, Japanese

    - installer was updated to include publisher, version, estimated size
      and support link in uninstall information
    - sources were cleaned up by removing the obsolete 
      kernel mode driver support at all
    - for programmers: winx_create_thread improved, udefrag.dll interface
      optimized (function prototypes changed!)


  Version 4.2.0  2010-03-30
  ------------------------------------------------------------------------------
    - multiple drives selection feature was added to GUI and Scheduler
    - progress indication was improved to be more detailed and smooth
    - defragmentation and optimization speedup was performed
    - --all, --all-fixed command line switches added to the console interface
      and to the boot time defragmenter
    - boot time interface initialization speedup was performed
    - boot time interface interactive mode commands set changed to be the same
      as in scripting mode
    - HTML reports encoding was changed to UTF-8, which renders nicely